[package]
name = "v2cert-verification-guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "v2cert_verification"
path = "src/bin/v2cert_verification.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "1.0.0", default-features = false }
alloy-sol-types = { version = "1.0.0", default-features = false }
risc0-steel = { git = "https://github.com/risc0/risc0-ethereum.git", rev = "fd7e39bc3427abfa7e8b1837c55ecbd5e49351db", default-features = false}
risc0-zkvm = { version = "1.2.0", default-features = false, features = ["std"] }
canoe-bindings = { path = "../../../bindings" }

[patch.crates-io]
# use optimized risc0 circuit
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
