[package]
name = "cert-verification-guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cert_verification"
path = "src/bin/cert_verification.rs"

[workspace]

[dependencies]
alloy-sol-types = { version = "1.3.1", default-features = false }
risc0-steel = { git = "https://github.com/boundless-xyz/steel.git", tag = "v2.4.0" }
risc0-zkvm = { version = "3.0.3", features = ["heap-embedded-alloc", "unstable"] }
canoe-bindings = { path = "../../../bindings" }
canoe-provider = { path = "../../../provider" } 

[patch.crates-io]
blst = { git = "https://github.com/risc0/blst", tag = "v0.3.15-risczero.1"}
c-kzg = { git = "https://github.com/risc0/c-kzg-4844.git", tag = "c-kzg/v2.1.1-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
